--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -153,11 +153,11 @@
 
                 <!-- Right Column: Image Preview and Actions -->
                 <div class="lg:col-span-3">
-                    <div class="bg-gray-800 rounded-lg shadow-inner p-4">
+                    <div class="bg-gray-800 rounded-lg shadow-inner p-4 h-[70vh] flex flex-col">
                         <div class="relative mb-4" id="heroImageContainer">
                             <!-- Image(s) and associated text/badges will be dynamically injected here by JavaScript -->
                         </div>
-                        <div id="thumbRow" class="flex items-center space-x-3 overflow-x-auto pb-2">
+                        <div id="thumbRow" class="flex items-center space-x-3 overflow-x-auto pb-2 flex-shrink-0">
                             <!-- Thumbnails will be injected here -->
                         </div>
                     </div>
