--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -169,6 +169,22 @@
                     </div>
                     <div id="scanStatus" class="text-sm text-gray-400"></div>
                 </div>
+                <div id="validationErrorAlert" class="hidden mt-4 p-4 bg-red-900 border-l-4 border-red-500 text-red-100 rounded-md">
+                    <div class="flex items-center">
+                        <svg class="w-6 h-6 mr-3 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zM8.707 7.293a1 1 0 00-1.414 1.414L8.586 10l-1.293 1.293a1 1 0 101.414 1.414L10 11.414l1.293 1.293a1 1 0 001.414-1.414L11.414 10l1.293-1.293a1 1 0 00-1.414-1.414L10 8.586 8.707 7.293z" clip-rule="evenodd"/>
+                        </svg>
+                        <div class="flex-grow">
+                            <h4 class="font-semibold text-lg">Directory Validation Failed</h4>
+                            <p id="validationErrorMessage" class="mt-1 text-sm"></p>
+                        </div>
+                        <button id="dismissValidationError" class="ml-4 text-red-300 hover:text-white">
+                            <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+                                <path fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"/>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
                  <div class="w-full bg-gray-700 rounded-full h-2.5 mt-4" id="scanProgress" style="display:none;">
                     <div id="scanProgressFill" class="bg-indigo-600 h-2.5 rounded-full relative flex items-center justify-center">
                         <span id="scanProgressText" class="text-xs font-semibold text-white absolute"></span>
